logos sizing fix on mobile

--- a/site/css/application.css
+++ b/site/css/application.css
@@ -308,6 +308,12 @@
         background-size: cover; }
       .page-two .project-window .main__project-ten li.main__project-ten__two {
         background: #c2ff61; }
+      @media screen and (max-width: 767px) {
+        .page-two .project-window .main__project-eleven img {
+          width: auto !important;
+          height: auto !important;
+          max-width: 100% !important;
+          max-height: 100% !important; } }
       .page-two .project-window .main .carousel {
         overflow-x: hidden;
         width: 100%;
